5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1635_1053.log
== SUBMITION (2019-04-10 12:24:36) 
-- CODE:
patrono = input("patronum: ")
if (patronum = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.207997
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 2
    if (patronum = cervo):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:24:51) 
-- CODE:
patrono = input("patronum: ")
if (patronum = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.193729
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 2
    if (patronum = "cervo"):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:25:04) 
-- CODE:
patrono = input("patronum: ")
if (patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.159847
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 2
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:25:11) 
-- CODE:
patrono = input("patronum: ")
if (patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono de Harry"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:25:23) 
-- CODE:
patrono = input("patronum: ")
if (patrono == cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.195261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 2, in <module>
    if (patrono == cervo):
NameError: name 'cervo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:25:27) 
-- CODE:
patrono = input("patronum: ")
if (patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "nao eh patrono de Harry"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:27:21) 
-- CODE:
patrono = input("patronum: ")
if (patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono"eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.171599
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 2
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:27:49) 
-- CODE:
patrono = input("patronum: ")
if (patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = <patrono>"eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.163798
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 2
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:28:01) 
-- CODE:
patrono = input("patronum: ")
if (patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = < patrono >"eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.202073
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 2
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:28:17) 
-- CODE:
patrono = input("patronum: ")
if (patrono = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = "patrono eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.17844
-- ERROR:
  File "/home/codebench/codes/1635/1053/main.py", line 2
    if (patrono = cervo):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:30:15) 
-- CODE:
patrono = input("patronum: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono+"nao eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.203388
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:30:16) 
-- CODE:
patrono = input("patronum: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono+"nao eh patrono de Harry"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:30:28) 
-- CODE:
patrono = input("patronum: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono+"nao eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.116053
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:30:39) 
-- CODE:
patrono = input("patronum: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono+" nao eh patrono de Harry"
print(mensagem)
-- EXECUTION TIME:
0.153516
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:30:54) 
-- CODE:
patrono = input("patronum: ")
if (patrono == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono+" nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.167198
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
